# helpdesk-api

./: Dockerfile  README.md  compose.yaml  docker-compose.yml  openapi.json  pyproject.toml  requirements.txt
app/: main.py
app/crud/: service.py  service_request.py
app/db/: init_db.py
app/routes/: service.py  service_request.py
app/schemas/: service.py  service_request.py
